--- a/trac.cmp
+++ b/trac.cmp
@@ -1,4 +1,4 @@
-Cmp-Mod V01 Created by Cvpcb (2014-jul-16 BZR unknown)-product   date = Thu 21 Jan 2016 10:40:47 AM PST
+Cmp-Mod V01 Created by Cvpcb (2014-jul-16 BZR unknown)-product   date = Wed 03 Feb 2016 09:20:37 PM PST
 
 BeginCmp
 TimeStamp = /5484E76F;
@@ -18,6 +18,27 @@ BeginCmp
 TimeStamp = /55346470;
 Reference = C3;
 ValeurCmp = 0.1uF;
+IdModule  = Capacitors_SMD:C_0805;
+EndCmp
+
+BeginCmp
+TimeStamp = /54851966;
+Reference = C4;
+ValeurCmp = 33pF;
+IdModule  = Capacitors_SMD:C_0805;
+EndCmp
+
+BeginCmp
+TimeStamp = /5485198F;
+Reference = C5;
+ValeurCmp = 33pF;
+IdModule  = Capacitors_SMD:C_0805;
+EndCmp
+
+BeginCmp
+TimeStamp = /54851992;
+Reference = C6;
+ValeurCmp = 33pF;
 IdModule  = Capacitors_SMD:C_0805;
 EndCmp
 
@@ -99,6 +120,13 @@ IdModule  = Discret:C2V10;
 EndCmp
 
 BeginCmp
+TimeStamp = /54D56C4B/54D56ED1;
+Reference = C18;
+ValeurCmp = 0.1uF;
+IdModule  = Capacitors_SMD:C_0805;
+EndCmp
+
+BeginCmp
 TimeStamp = /54D56C4B/54D56EC7;
 Reference = C19;
 ValeurCmp = 220uF;
@@ -148,6 +176,13 @@ IdModule  = Capacitors_SMD:C_0805;
 EndCmp
 
 BeginCmp
+TimeStamp = /54D56C4B/56A14111/56A16DE0;
+Reference = C26;
+ValeurCmp = 0.1uF;
+IdModule  = Capacitors_SMD:C_0805;
+EndCmp
+
+BeginCmp
 TimeStamp = /54D59041;
 Reference = D1;
 ValeurCmp = LED;
@@ -159,6 +194,13 @@ TimeStamp = /54D59047;
 Reference = D2;
 ValeurCmp = LED;
 IdModule  = LEDs:LED-3MM;
+EndCmp
+
+BeginCmp
+TimeStamp = /54D56C4B/56A14111/56A176AC;
+Reference = D3;
+ValeurCmp = ZENER;
+IdModule  = Diodes_SMD:SOD-123;
 EndCmp
 
 BeginCmp
@@ -207,7 +249,7 @@ BeginCmp
 TimeStamp = /54D96992;
 Reference = J1;
 ValeurCmp = DB9;
-IdModule  = Connect:DB9FC;
+IdModule  = Connect:DB9MC;
 EndCmp
 
 BeginCmp
@@ -316,6 +358,13 @@ IdModule  = Resistors_SMD:R_0805;
 EndCmp
 
 BeginCmp
+TimeStamp = /54D56C4B/56A14111/56A16CEB;
+Reference = R7;
+ValeurCmp = 1k;
+IdModule  = Resistors_SMD:R_0805;
+EndCmp
+
+BeginCmp
 TimeStamp = /548D13A8;
 Reference = R8;
 ValeurCmp = 3.6k;
@@ -333,6 +382,13 @@ BeginCmp
 TimeStamp = /5484E86E;
 Reference = R10;
 ValeurCmp = 47k;
+IdModule  = Resistors_SMD:R_0805;
+EndCmp
+
+BeginCmp
+TimeStamp = /54D56C4B/56A14111/56A16BB3;
+Reference = R11;
+ValeurCmp = 8k;
 IdModule  = Resistors_SMD:R_0805;
 EndCmp
 
@@ -505,6 +561,34 @@ IdModule  = Resistors_SMD:R_0805;
 EndCmp
 
 BeginCmp
+TimeStamp = /54D56C4B/56A14111/56A16B6A;
+Reference = R36;
+ValeurCmp = 10.5k;
+IdModule  = Resistors_SMD:R_0805;
+EndCmp
+
+BeginCmp
+TimeStamp = /54D56C4B/56A14111/56A16CA5;
+Reference = R37;
+ValeurCmp = 10k;
+IdModule  = Resistors_SMD:R_0805;
+EndCmp
+
+BeginCmp
+TimeStamp = /54D56C4B/56A14111/56A16A35;
+Reference = R38;
+ValeurCmp = 5k;
+IdModule  = Resistors_SMD:R_0805;
+EndCmp
+
+BeginCmp
+TimeStamp = /54D56C4B/56A14111/56A16C21;
+Reference = R39;
+ValeurCmp = 2.2k;
+IdModule  = Resistors_SMD:R_0805;
+EndCmp
+
+BeginCmp
 TimeStamp = /5484F9E3;
 Reference = S1;
 ValeurCmp = SIM;
@@ -600,6 +684,13 @@ TimeStamp = /569D5917;
 Reference = U12;
 ValeurCmp = ANTNA;
 IdModule  = trac:ANTNA;
+EndCmp
+
+BeginCmp
+TimeStamp = /54D56C4B/56A14111/56A169A5;
+Reference = U13;
+ValeurCmp = LM393;
+IdModule  = Housings_SOIC:SOIC-8_3.9x4.9mm_Pitch1.27mm;
 EndCmp
 
 EndListe
